--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(':InventorsFtcLib')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     implementation "com.acmerobotics.roadrunner:core:1.0.0-beta6"
@@ -42,5 +43,5 @@ dependencies {
     implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'org.ftclib.ftclib:vision:2.1.0'
     implementation 'org.openftc:apriltag:2.0.0'
-    implementation 'com.github.theinventors-ftc:InventorsFtcLib:0.1.1'
+//    implementation 'com.github.theinventors-ftc:InventorsFtcLib:71e4867'
 }
