--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,17 +32,20 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(':InventorsFtcLib')
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.roadrunner:core:1.0.0-beta6"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.0-beta6"
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.11"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.14"
     implementation 'org.openftc:easyopencv:1.7.0'
     implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'org.ftclib.ftclib:vision:2.1.0'
     implementation 'org.openftc:apriltag:2.0.0'
-    implementation 'com.github.theinventors-ftc:InventorsFtcLib:846658a' // Stable: 846658a
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+
+//    implementation 'com.github.theinventors-ftc:InventorsFtcLib:846658a' // Stable: 846658a
     // Test acae552(plus localizer)
 }
