--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,7 +32,7 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation project(':InventorsFtcLib')
+//    implementation project(':InventorsFtcLib')
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
@@ -46,6 +46,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 
-//    implementation 'com.github.theinventors-ftc:InventorsFtcLib:846658a' // Stable: 846658a
+    implementation 'com.github.theinventors-ftc:InventorsFtcLib:ea2e391' // Stable: 846658a
     // Test acae552(plus localizer)
 }
