Ready for Merge

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,12 +27,11 @@ repositories {
     maven {
         url = 'https://maven.brott.dev/'
     }
-//    maven { url = 'https://jitpack.io' }
+    maven { url = 'https://jitpack.io' }
 }
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation project(':InventorsFtcLib')
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
@@ -46,5 +45,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 
-//    implementation 'com.github.theinventors-ftc:InventorsFtcLib:ea2e391'
+    implementation 'com.github.theinventors-ftc:InventorsFtcLib:ea2e391'
 }
