--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,6 +32,7 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(':InventorsFtcLib')
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
@@ -44,6 +45,4 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
-
-    implementation 'com.github.theinventors-ftc:InventorsFtcLib:0c1c96d'
 }
