Fixing Threshhold and ROIs in team prop detection

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,7 +32,6 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation project(':InventorsFtcLib')
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
@@ -46,5 +45,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 
-//    implementation 'com.github.theinventors-ftc:InventorsFtcLib:0c1c96d3cf73f7eeb3b76b5db6c2b4326c152911'
+    implementation 'com.github.theinventors-ftc:InventorsFtcLib:5b689bd'
 }
