--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -32,12 +32,12 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
-//    implementation project(':InventorsFtcLib')
+    implementation project(':InventorsFtcLib')
 
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.14"
-    implementation 'org.openftc:easyopencv:1.7.0'
+    implementation "com.acmerobotics.dashboard:dashboard:0.4.15"
+    implementation 'org.openftc:easyopencv:1.7.3'
     implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'org.ftclib.ftclib:vision:2.1.0'
     implementation 'org.openftc:apriltag:2.0.0'
@@ -46,5 +46,5 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 
-    implementation 'com.github.theinventors-ftc:InventorsFtcLib:566cab5'
+//    implementation 'com.github.theinventors-ftc:InventorsFtcLib:566cab5'
 }
