--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 
+    implementation 'org.yaml:snakeyaml:2.0'
+
 //    implementation 'com.github.theinventors-ftc:InventorsFtcLib:566cab5'
 }
